--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
 header {
     background-color: yellow;
 }
+.container {
+    background-color: yellow;
+}
+h2, h3 {
+    color: green;
+}
+h4 {
+    color: red;
+}
